command user interface initial commit

--- a/apps/client/src/CMakeLists.txt
+++ b/apps/client/src/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_executable (clienttest client-net-test.cpp)
+add_executable (commandUI ui_command.cpp)
 target_link_libraries ( clienttest ${Boost_LIBRARIES} Connector )
+target_link_libraries ( commandUI ${Boost_LIBRARIES} Connector )
