added files for database tools class

--- a/apps/server/src/CMakeLists.txt
+++ b/apps/server/src/CMakeLists.txt
@@ -1,2 +1,6 @@
 add_executable (servertest server-net-test.cpp)
 target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher )
+
+
+add_executable(dbtest databaseTest.cpp)
+target_link_libraries (dbtest sqlite3)
