--- a/apps/server/lib/database/CMakeLists.txt
+++ b/apps/server/lib/database/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(DatabaseTool DatabaseTool.cpp)
-target_link_libraries ( DatabaseTool ${SQLITE3_LIBRARIES} )
+target_link_libraries ( DatabaseTool sqlite3 )
