[WIP] Significantly improved client side networking.

--- a/apps/client/src/CMakeLists.txt
+++ b/apps/client/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable (clienttest client-net-test.cpp)
-target_link_libraries ( clienttest ${Boost_LIBRARIES} Connector )
+target_link_libraries ( clienttest ${Boost_LIBRARIES} Transceiver )
