--- a/apps/server/lib/database/CMakeLists.txt
+++ b/apps/server/lib/database/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(wrapped Database.cpp Query.cpp StderrLog.cpp SysLog.cpp)
 target_link_libraries ( wrapped sqlite3)
 
 add_library(DatabaseTool DatabaseTool.cpp)
-target_link_libraries ( DatabaseTool sqlite3 wrapped)
+target_link_libraries ( DatabaseTool sqlite3 wrapped ${Boost_LIBRARIES})
