--- a/apps/server/lib/net/CMakeLists.txt
+++ b/apps/server/lib/net/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(Watcher Watcher.cpp)
 target_link_libraries ( Watcher ${Boost_LIBRARIES} )
 
-add_library(Connection Connection.cpp)
-target_link_libraries ( Connection ${Boost_LIBRARIES} )
+add_library(Session Session.cpp)
+target_link_libraries ( Session ${Boost_LIBRARIES} )
