[WIP] Minor fixes

--- a/apps/server/src/CMakeLists.txt
+++ b/apps/server/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable (servertest server-net-test.cpp)
-target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher Session Authenticator )
+target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher Session Authenticator DatabaseTools )
