Fixed CMake file; tested the database module through "client to server"

--- a/apps/server/src/CMakeLists.txt
+++ b/apps/server/src/CMakeLists.txt
@@ -2,4 +2,4 @@ add_executable ( servertest server-net-test.cpp )
 add_executable( dbtest databaseTest.cpp )
 
 target_link_libraries (dbtest DatabaseTool)
-target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher Session Authenticator DatabaseTools )
+target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher Session Authenticator DatabaseTool )
