Changed an include

--- a/apps/server/lib/world/CMakeLists.txt
+++ b/apps/server/lib/world/CMakeLists.txt
@@ -1,7 +1,4 @@
 add_library(Zone Zone.cpp)
 add_library(World World.cpp)
-target_link_libraries ( World ${Boost_LIBRARIES} )
-target_link_libraries ( World WorldConstants )
-target_link_libraries ( Zone WorldConstants )
-target_link_libraries ( World DatabaseTool )
-target_link_libraries ( Zone DatabaseTool )
+target_link_libraries ( World ${Boost_LIBRARIES} WorldConstants DatabaseTool Command )
+target_link_libraries ( Zone WorldConstants DatabaseTool )
