Fixed terrible-terrible bugs

--- a/apps/server/lib/parse/CMakeLists.txt
+++ b/apps/server/lib/parse/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(CommandParser CommandParser.cpp)
 add_library(Dictionary DictionaryCmds.cpp)
-target_link_libraries ( CommandParser WorldConstants Command )
+target_link_libraries ( CommandParser World  )
