--- a/apps/server/lib/world/CMakeLists.txt
+++ b/apps/server/lib/world/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(Zone Zone.cpp)
 add_library(World World.cpp)
-target_link_libraries ( World ${Boost_LIBRARIES} WorldConstants DatabaseTool Command )
-target_link_libraries ( Zone WorldConstants DatabaseTool )
+add_library(WorldConstants WorldConstants.cpp)
+target_link_libraries ( World ${Boost_LIBRARIES} DatabaseTool Zone WorldConstants )
+target_link_libraries ( Zone DatabaseTool WorldConstants )
