--- a/apps/server/src/CMakeLists.txt
+++ b/apps/server/src/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable ( testStuff testStuff.cpp )
 
 target_link_libraries (dbtest DatabaseTool)
 target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher Session Authenticator DatabaseTool )
-target_link_libraries ( testStuff CommandParser DatabaseTool WorldConstants Command)
+target_link_libraries ( testStuff CommandParser DatabaseTool World )
