Defined constants (Session); improved CMake files, created an "official" server main program

--- a/apps/server/lib/net/CMakeLists.txt
+++ b/apps/server/lib/net/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library( Watcher Watcher.cpp )
-target_link_libraries ( Watcher ${Boost_LIBRARIES} )
+target_link_libraries ( Watcher ${Boost_LIBRARIES} Session )
 
 add_library( Session Session.cpp )
 target_link_libraries ( Session ${Boost_LIBRARIES} CommandParser Authenticator )
