--- a/apps/server/lib/CMakeLists.txt
+++ b/apps/server/lib/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory ( world )
 add_subdirectory ( parse )
 add_subdirectory ( database )
 add_subdirectory ( auth )
+add_subdirectory ( server )
