--- a/apps/server/src/CMakeLists.txt
+++ b/apps/server/src/CMakeLists.txt
@@ -2,8 +2,8 @@ add_executable ( servertest server-net-test.cpp )
 add_executable ( dbtest databaseTest.cpp )
 add_executable ( testStuff testStuff.cpp )
 
-add_executable ( runServer server.cpp )
-target_link_libraries ( runServer Watcher )
+add_executable ( runServer main.cpp )
+target_link_libraries ( runServer Watcher Server )
 
 target_link_libraries ( dbtest DatabaseTool )
 target_link_libraries ( servertest ${Boost_LIBRARIES} Watcher Session Authenticator DatabaseTool )
