Reworked User in implementation within session; authenticator is now more intuitive and interacts with User directly; session thread is now maintained until session death; server now supports wiping sessions off its map; sessions will now attempt to gracefully kill themselves if they lose connect to the client; adjust sessions to the auth changes + added a macro for a more verbose logging

--- a/apps/server/lib/auth/CMakeLists.txt
+++ b/apps/server/lib/auth/CMakeLists.txt
@@ -1,2 +1,4 @@
+add_library( User User.cpp )
+
 add_library( Authenticator Authenticator.cpp )
-target_link_libraries ( Authenticator DatabaseTool )
+target_link_libraries ( Authenticator DatabaseTool User )
