--- a/apps/client/src/CMakeLists.txt
+++ b/apps/client/src/CMakeLists.txt
@@ -5,4 +5,4 @@ add_executable ( clienttest client-net-test.cpp )
 target_link_libraries ( clienttest ${Boost_LIBRARIES} Transceiver )
 
 add_executable ( runClient client.cpp )
-target_link_libraries ( runClient Transceiver UIWriter UIReader )
+target_link_libraries ( runClient Transceiver UIWriter UIReader ${GTKMM_LIBRARIES})
