--- a/apps/server/lib/server/CMakeLists.txt
+++ b/apps/server/lib/server/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library( Server Server.cpp )
-target_link_libraries ( Server Watcher Session )
+target_link_libraries ( Server Watcher Session DatabaseTool )
