[WIP] Introduced messenger module

--- a/apps/server/lib/CMakeLists.txt
+++ b/apps/server/lib/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory ( parse )
 add_subdirectory ( database )
 add_subdirectory ( auth )
 add_subdirectory ( server )
+add_subdirectory ( msg )
