[WIP] Added zone and private messaging (needs parser to finish the implementation), fixed zone to new db wrapper

--- a/apps/server/lib/msg/CMakeLists.txt
+++ b/apps/server/lib/msg/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library( CarrierPigeon CarrierPigeon.cpp )
-target_link_libraries ( CarrierPigeon Server DatabaseTool )
+target_link_libraries ( CarrierPigeon ${Boost_LIBRARIES} Server DatabaseTool )
