Implemented proper notifications for players moving and picking up items

--- a/apps/server/lib/world/CMakeLists.txt
+++ b/apps/server/lib/world/CMakeLists.txt
@@ -3,3 +3,4 @@ add_library(World World.cpp)
 add_library(WorldConstants WorldConstants.cpp)
 target_link_libraries ( World ${Boost_LIBRARIES} DatabaseTool Zone WorldConstants )
 target_link_libraries ( Zone DatabaseTool WorldConstants )
+target_link_libraries ( WorldConstants ${Boost_LIBRARIES} )
