Fixed issues and added functionality related to Combat

--- a/apps/server/lib/combat/CMakeLists.txt
+++ b/apps/server/lib/combat/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(Combat Combat.cpp)
 add_library(CombatInstance CombatInstance.cpp)
 target_link_libraries ( Combat DatabaseTool CombatInstance )
-target_link_libraries ( CombatInstance DatabaseTool ${CMAKE_THREAD_LIBS_INIT} )
+target_link_libraries ( CombatInstance DatabaseTool Zone ${CMAKE_THREAD_LIBS_INIT} )
