[WIP] Moved around files for better organization; started implementing various editors + new zone management?

--- a/apps/server/lib/CMakeLists.txt
+++ b/apps/server/lib/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory ( database )
 add_subdirectory ( auth )
 add_subdirectory ( server )
 add_subdirectory ( msg )
+add_subdirectory ( mod )
