--- a/apps/server/lib/mod/CMakeLists.txt
+++ b/apps/server/lib/mod/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library( ItemEditor ItemEditor.cpp )
-target_link_libraries ( ItemEditor ${Boost_LIBRARIES} DatabaseTool Server )
+add_library( ObjectEditor ObjectEditor.cpp )
+target_link_libraries ( ObjectEditor ${Boost_LIBRARIES} DatabaseTool Server )
 
 add_library( WorldEditor WorldEditor.cpp )
-target_link_libraries ( WorldEditor ${Boost_LIBRARIES} DatabaseTool Server ItemEditor )
+target_link_libraries ( WorldEditor ${Boost_LIBRARIES} DatabaseTool Server ObjectEditor )
 
 add_library( Editor Editor.cpp )
-target_link_libraries ( Editor ${Boost_LIBRARIES} WorldEditor ItemEditor DatabaseTool Server )
+target_link_libraries ( Editor ${Boost_LIBRARIES} WorldEditor ObjectEditor DatabaseTool Server )
