--- a/apps/server/lib/world/CMakeLists.txt
+++ b/apps/server/lib/world/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(Zone Zone.cpp)
 add_library(World World.cpp)
 add_library(WorldConstants WorldConstants.cpp)
 target_link_libraries ( World ${Boost_LIBRARIES} DatabaseTool Zone Combat WorldConstants )
-target_link_libraries ( Zone DatabaseTool WorldConstants )
+target_link_libraries ( Zone DatabaseTool WorldConstants Server )
