--- a/apps/server/lib/CMakeLists.txt
+++ b/apps/server/lib/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory ( server )
 add_subdirectory ( msg )
 add_subdirectory ( mod )
 add_subdirectory ( combat )
+add_subdirectory ( cmd )
