[WIP] Began reworking parsing logic for editors and introduced a more intuitive creation interface to the user

--- a/apps/server/src/CMakeLists.txt
+++ b/apps/server/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 add_executable ( runServer main.cpp )
 target_link_libraries ( runServer Server )
 
+add_executable ( testk testk.cpp )
+target_link_libraries ( testk Server ${Boost_LIBRARIES} )
+
 
 
 
