[WIP] reworked some Editor regular expressions

--- a/apps/server/lib/mod/CMakeLists.txt
+++ b/apps/server/lib/mod/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library( ObjectEditor ObjectEditor.cpp )
 target_link_libraries ( ObjectEditor ${Boost_LIBRARIES} DatabaseTool Server )
 
 add_library( WorldEditor WorldEditor.cpp )
-target_link_libraries ( WorldEditor ${Boost_LIBRARIES} DatabaseTool Server ObjectEditor )
+target_link_libraries ( WorldEditor ${Boost_LIBRARIES} DatabaseTool Server ObjectEditor Zone )
 
 add_library( Editor Editor.cpp )
 target_link_libraries ( Editor ${Boost_LIBRARIES} WorldEditor ObjectEditor DatabaseTool Server )
