[WIP,UNSTABLE] Attempt at reimplementing of the worker threads for the GUI (keeping old algorithms)

--- a/apps/client/lib/ui/CMakeLists.txt
+++ b/apps/client/lib/ui/CMakeLists.txt
@@ -1,10 +1,11 @@
-add_library( UIWriter UIWriter.cpp )
-target_link_libraries ( UIWriter ConsoleWriter )
+#add_library( UIWriter UIWriter.cpp )
+#target_link_libraries ( UIWriter ConsoleWriter )
+#
+#
+#add_library( UIReader UIReader.cpp )
+#target_link_libraries ( UIReader ConsoleReader )
 
+add_library( LoginWindow LoginWindow.cpp )
+target_link_libraries ( LoginWindow GameWindow )
 
-add_library( UIReader UIReader.cpp )
-target_link_libraries ( UIReader ConsoleReader )
-
-add_library( MainWindow MainWindow.cpp )
-target_link_libraries ( MainWindow )
-
+add_library( GameWindow GameWindow.cpp )
