--- a/apps/client/src/CMakeLists.txt
+++ b/apps/client/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable ( runClient client.cpp )
 #target_link_libraries ( runClient Transceiver UIWriter UIReader MainWindow ${GTKMM_LIBRARIES})
-target_link_libraries ( runClient Game MainWindow ${GTKMM_LIBRARIES} )
+target_link_libraries ( runClient Game LoginWindow GameWindow ${GTKMM_LIBRARIES} )
