--- a/apps/client/lib/ui/CMakeLists.txt
+++ b/apps/client/lib/ui/CMakeLists.txt
@@ -6,9 +6,10 @@
 #target_link_libraries ( UIReader ConsoleReader )
 
 add_library( LoginFrame LoginFrame.cpp )
+add_library( GameFrame GameFrame.cpp )
 #target_link_libraries ( UIReader ConsoleReader )
 
 add_library( MainWindow MainWindow.cpp )
-target_link_libraries ( MainWindow LoginFrame )
+target_link_libraries ( MainWindow LoginFrame GameFrame )
 
 #target_link_libraries ( LoginWindow GameWindow )
