--- a/apps/client/lib/ui/CMakeLists.txt
+++ b/apps/client/lib/ui/CMakeLists.txt
@@ -6,7 +6,10 @@
 #target_link_libraries ( UIReader ConsoleReader )
 
 add_library( LoginFrame LoginFrame.cpp )
+target_link_libraries( LoginFrame ${GTKMM_LIBRARIES} Game )
+
 add_library( GameFrame GameFrame.cpp )
+target_link_libraries( GameFrame ${GTKMM_LIBRARIES} Game )
 #target_link_libraries ( UIReader ConsoleReader )
 
 add_library( MainWindow MainWindow.cpp )
