--- a/apps/client/lib/ui/CMakeLists.txt
+++ b/apps/client/lib/ui/CMakeLists.txt
@@ -8,11 +8,14 @@
 add_library( LoginFrame LoginFrame.cpp )
 target_link_libraries( LoginFrame ${GTKMM_LIBRARIES} Game )
 
+add_library( RegisterFrame RegisterFrame.cpp )
+target_link_libraries( RegisterFrame ${GTKMM_LIBRARIES} Game )
+
 add_library( GameFrame GameFrame.cpp )
 target_link_libraries( GameFrame ${GTKMM_LIBRARIES} Game )
 #target_link_libraries ( UIReader ConsoleReader )
 
 add_library( MainWindow MainWindow.cpp )
-target_link_libraries ( MainWindow LoginFrame GameFrame )
+target_link_libraries ( MainWindow LoginFrame RegisterFrame GameFrame )
 
 #target_link_libraries ( LoginWindow GameWindow )
