--- a/apps/client/lib/ui/CMakeLists.txt
+++ b/apps/client/lib/ui/CMakeLists.txt
@@ -14,11 +14,14 @@ target_link_libraries( RegisterFrame ${GTKMM_LIBRARIES} Game )
 add_library( CharacterFrame CharacterFrame.cpp )
 target_link_libraries( CharacterFrame ${GTKMM_LIBRARIES} Game )
 
+add_library( CreateFrame CreateFrame.cpp )
+target_link_libraries( CreateFrame ${GTKMM_LIBRARIES} Game )
+
 add_library( GameFrame GameFrame.cpp )
 target_link_libraries( GameFrame ${GTKMM_LIBRARIES} Game )
 #target_link_libraries ( UIReader ConsoleReader )
 
 add_library( MainWindow MainWindow.cpp )
-target_link_libraries ( MainWindow LoginFrame RegisterFrame CharacterFrame GameFrame Game )
+target_link_libraries ( MainWindow LoginFrame RegisterFrame CharacterFrame CreateFrame GameFrame Game )
 
 #target_link_libraries ( LoginWindow GameWindow )
