--- a/apps/server/lib/parse/CMakeLists.txt
+++ b/apps/server/lib/parse/CMakeLists.txt
@@ -1,4 +1,3 @@
 add_library( CommandParser CommandParser.cpp )
-add_library( Dictionary DictionaryCmds.cpp )
 
-target_link_libraries ( CommandParser World Dictionary )
+target_link_libraries ( CommandParser World  )
