--- a/apps/server/lib/CMakeLists.txt
+++ b/apps/server/lib/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory ( parse )
 add_subdirectory ( database )
 add_subdirectory ( auth )
 add_subdirectory ( server )
+add_subdirectory ( spellcasting )
 add_subdirectory ( msg )
 add_subdirectory ( mod )
 add_subdirectory ( combat )
