--- a/apps/server/lib/spellcasting/CMakeLists.txt
+++ b/apps/server/lib/spellcasting/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(Spellcasting Spellcasting.cpp)
 
-target_link_libraries ( Spellcasting ${Boost_LIBRARIES} Combat DatabaseTool )
+target_link_libraries ( Spellcasting ${Boost_LIBRARIES} Combat CombatInstance DatabaseTool )
