--- a/apps/server/lib/spellcasting/CMakeLists.txt
+++ b/apps/server/lib/spellcasting/CMakeLists.txt
@@ -2,4 +2,4 @@ add_library(Spellcasting Spellcasting.cpp)
 add_library(CastSpell CastSpell.cpp)
 
 target_link_libraries ( Spellcasting ${Boost_LIBRARIES} Combat CastSpell Character DatabaseTool )
-target_link_libraries ( CastSpell ${Boost_LIBRARIES} Server Character DatabaseTool )
+target_link_libraries ( CastSpell ${Boost_LIBRARIES} Server Character Zone DatabaseTool )
